--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -579,6 +579,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "qiblaDirectionForCity": "Dirección de la Qibla para la ciudad:",
+  "@qiblaDirectionForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "qiblaNoteForDesktop": "Esta función solo está disponible en dispositivos móviles. Usa tu smartphone o tablet para acceder a la dirección de la Qibla según tu ubicación actual.",
+  "@qiblaNoteForDesktop": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "reminder": "Recordatorio",
+  "@reminder": {
+    "type": "text",
+    "placeholders": {}
+  },
   "liatafaqahuu": "comprendan",
   "@liatafaqahuu": {
     "type": "text",
