--- a/assets/locales/fil.json
+++ b/assets/locales/fil.json
@@ -579,6 +579,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "qiblaDirectionForCity": "Direksyon ng Qibla para sa lungsod:",
+  "@qiblaDirectionForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "qiblaNoteForDesktop": "Ang tampok na ito ay makukuha lamang sa mga mobile device. Mangyaring gamitin ang iyong smartphone o tablet upang makita ang direksyon ng Qibla batay sa iyong kasalukuyang lokasyon.",
+  "@qiblaNoteForDesktop": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "reminder": "Paalala",
+  "@reminder": {
+    "type": "text",
+    "placeholders": {}
+  },
   "liatafaqahuu": "maunawaan",
   "@liatafaqahuu": {
     "type": "text",
