--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -579,6 +579,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "qiblaDirectionForCity": "Arah kiblat untuk kota:",
+  "@qiblaDirectionForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "qiblaNoteForDesktop": "Fitur ini hanya tersedia di perangkat seluler. Harap gunakan smartphone atau tablet Anda untuk mengakses arah kiblat berdasarkan lokasi Anda saat ini.",
+  "@qiblaNoteForDesktop": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "reminder": "Pengingat",
+  "@reminder": {
+    "type": "text",
+    "placeholders": {}
+  },
   "liatafaqahuu": "mendalami",
   "@liatafaqahuu": {
     "type": "text",
