--- a/assets/locales/ku.json
+++ b/assets/locales/ku.json
@@ -579,6 +579,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "qiblaDirectionForCity": "ئاراستیی قیبلە بۆ شار:",
+  "@qiblaDirectionForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "qiblaNoteForDesktop": "ئەم تایبەتمەندییە تەنها لەسەر ئامێرە مۆبایلەکان بەردەستە. تکایە مۆبایل یان تابڵێتەکەت بەکاربهێنە بۆ دیاریکردنی ئاراستیی قیبلە پەیوەست بە شوێنی ئێستات.",
+  "@qiblaNoteForDesktop": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "reminder": "بیرهێنان",
+  "@reminder": {
+    "type": "text",
+    "placeholders": {}
+  },
   "liatafaqahuu": "ليتفقهوا",
   "@liatafaqahuu": {
     "type": "text",
