--- a/assets/locales/so.json
+++ b/assets/locales/so.json
@@ -579,6 +579,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "qiblaDirectionForCity": "Jihada Qiblada ee magaalada:",
+  "@qiblaDirectionForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "qiblaNoteForDesktop": "Astaantan waxa lagu heli karaa oo kaliya aaladaha mobilada. Fadlan isticmaal taleefankaaga casriga ah ama tablet-kaaga si aad u hesho jihada Qiblada ee ku salaysan goobtaada hadda.",
+  "@qiblaNoteForDesktop": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "reminder": "Xusuusin",
+  "@reminder": {
+    "type": "text",
+    "placeholders": {}
+  },
   "liatafaqahuu": "fahmaan",
   "@liatafaqahuu": {
     "type": "text",
