--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -372,7 +372,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "locationNote": "يرجى تفعيل خدمة تحديد الموقع لتصلك أوقات الصلاة بدقة بناءً على موقعك الحالي.\nيُرجى العلم أن جميع بيانات موقعك ستبقى سرية تمامًا ولن يتم مشاركتها مع أي طرف ثالث.",
+  "locationNote": "يرجى تفعيل خدمة تحديد الموقع لتصلك أوقات الصلاة بدقة بناءً على موقعك الحالي.\nلضمان تحديث أوقات الصلاة تلقائيًا عند سفرك أو انتقالك لمكان جديد، يحتاج التطبيق أيضًا إلى الوصول لموقعك في الخلفية.\nنؤكد لك أن جميع بيانات موقعك ستبقى سرية تمامًا ولن يتم مشاركتها مع أي طرف ثالث.",
   "@locationNote": {
     "type": "text",
     "placeholders": {}
