--- a/assets/locales/bn.json
+++ b/assets/locales/bn.json
@@ -372,7 +372,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "locationNote": "আপনার বর্তমান অবস্থানের ভিত্তিতে নির্ভুল নামাজের সময় পেতে অনুগ্রহ করে লোকেশন সেবা চালু করুন।\nঅনুগ্রহ করে জেনে রাখুন যে আপনার অবস্থানের সমস্ত তথ্য সম্পূর্ণ গোপনীয় থাকবে এবং কোন তৃতীয় পক্ষের সাথে শেয়ার করা হবে না।",
+  "locationNote": "আপনার বর্তমান অবস্থানের ভিত্তিতে সঠিক নামাজের সময় পেতে অনুগ্রহ করে অবস্থান সেবা সক্রিয় করুন।\nআপনি যখন ভ্রমণ করেন বা নতুন স্থানে যান তখন নামাজের সময় স্বয়ংক্রিয়ভাবে আপডেট হওয়া নিশ্চিত করতে, অ্যাপটির ব্যাকগ্রাউন্ডে আপনার অবস্থানে অ্যাক্সেসের প্রয়োজন।\nআমরা আপনাকে নিশ্চয়তা দিচ্ছি যে আপনার সমস্ত অবস্থানের তথ্য সম্পূর্ণ গোপনীয় থাকবে এবং কোনো তৃতীয় পক্ষের সাথে ভাগ করা হবে না।",
   "@locationNote": {
     "type": "text",
     "placeholders": {}
