--- a/assets/locales/ku.json
+++ b/assets/locales/ku.json
@@ -372,7 +372,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "locationNote": "تکایە خزمەتگوزارییەکانی شوێن چالاک بکە بۆ وەرگرتنی کاتەکانی نوێژ بە وردی پەیوەست بە شوێنی ئێستات.\nتکایە ئاگادار بەوە بە کە هەموو داتاکانی شوێنت بە تەواوی نهێنی دەبن و ناگواستنەوە بۆ هیچ لایەنێکی سێیەم.",
+  "locationNote": "تکایە خزمەتگوزارییەکانی شوێن چالاک بکە بۆ وەرگرتنی کاتەکانی نوێژ بە وردی پەیوەست بە شوێنی ئێستات.\nبۆ دڵنیابوون لەوەی کە کاتەکانی نوێژ بە شێوەی خۆکار نوێ دەکرێنەوە کاتێک گەشت دەکەیت یان بۆ شوێنێکی نوێ دەچیت، ئەپەکە پێویستی بە دەستگەیشتن بە شوێنەکەت هەیە لە پاشبنەمادا.\nدڵنیات دەکەینەوە کە هەموو داتاکانی شوێنت بە تەواوی نهێنی دەبن و ناگواستنەوە بۆ هیچ لایەنێکی سێیەم.",
   "@locationNote": {
     "type": "text",
     "placeholders": {}
