--- a/assets/locales/so.json
+++ b/assets/locales/so.json
@@ -372,7 +372,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "locationNote": "Fadlan wax ka bedel adeegga go'aaminta goobta si aad si sax ah u hesho waqtiyada salaadda iyadoo ku saleysan goobta hadda joogtid.\nFadlan ogow in dhammaan xogta goobta aad joogtid ay siri ahaanaysay oo aan la wadaagin doonin qof saddexaad.",
+  "locationNote": "Fadlan daar adeegyada goobta si aad u hesho saacadaha salaadda ee sax ah oo ku salaysan goobta aad hadda joogto.\nSi loo hubiyo in saacadaha salaadda si toos ah loo cusboonaysiiyo markaad safar tagto ama u guurto meel cusub, app-ka waxa kale oo uu u baahan yahay in uu galo goobta aad joogto marka uu ka shaqaynayo dhabarka.\nWaxaan kugu dhamaynayaa in dhammaan xogta goobta aad joogto ay ahaan doonto mid sir ah oo aan la wadaagi doonin cid saddexaad ah.",
   "@locationNote": {
     "type": "text",
     "placeholders": {}
