--- a/assets/locales/ur.json
+++ b/assets/locales/ur.json
@@ -372,7 +372,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "locationNote": "براہ کرم اپنے موجودہ مقام کی بنیاد پر درست نماز کے اوقات حاصل کرنے کے لیے مقام کی سروس فعال کریں۔\nبراہ کرم جان لیں کہ آپ کے مقام کی تمام معلومات مکمل طور پر خفیہ رہیں گی اور کسی تیسرے فریق کے ساتھ شیئر نہیں کی جائیں گی۔",
+  "locationNote": "براہ کرم اپنے موجودہ مقام کی بنیاد پر درست نماز کے اوقات حاصل کرنے کے لیے مقام کی خدمات کو فعال کریں۔\nیہ یقینی بنانے کے لیے کہ جب آپ سفر کریں یا نئی جگہ جائیں تو نماز کے اوقات خودکار طور پر اپڈیٹ ہو جائیں، ایپ کو آپ کے مقام تک بیک گراؤنڈ میں رسائی کی بھی ضرورت ہے۔\nہم آپ کو یقین دلاتے ہیں کہ آپ کے تمام مقام کا ڈیٹا مکمل طور پر نجی رہے گا اور کسی تیسری پارٹی کے ساتھ شیئر نہیں کیا جائے گا۔",
   "@locationNote": {
     "type": "text",
     "placeholders": {}
