--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -599,8 +599,23 @@
     "type": "text",
     "placeholders": {}
   },
-  "understanding": "untuk memperdalam pengetahuan mereka tentang agama",
+  "understanding": "untuk mendapatkan pemahaman tentang agama",
   "@understanding": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "baset": "Abdul Basit",
+  "@baset": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "qatami": "Nasser Al-Qatami",
+  "@qatami": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "salah": "Salah Al-Deeb",
+  "@salah": {
     "type": "text",
     "placeholders": {}
   }
