--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ تصميم واجهة مستخدم جديدة.\n۞ إضافة مكتبة لكتب التفسير والحديث.\n۞ تحسين أداء التطبيق.\n۞ إضافة ميزات جديدة.",
+  "What'sNewDetails10": "۞ إصلاح مشكلة عدم ظهور الإشعارات.\n۞ تحسينات عامة في الأداء والاستقرار.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
