--- a/assets/locales/bn.json
+++ b/assets/locales/bn.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ নতুন ইউজার ইন্টারফেস ডিজাইন।\n۞ তাফসির ও হাদিসের বইয়ের লাইব্রেরি সংযোজন।\n۞ অ্যাপের পারফরমেন্স উন্নতি।\n۞ নতুন ফিচার সংযোজন।",
+  "What'sNewDetails10": "۞ বিজ্ঞপ্তি প্রদর্শনের সমস্যা সমাধান করা হয়েছে।\n۞ সাধারণ পারফরমেন্স এবং স্থিতিশীলতা উন্নতি।",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
