--- a/assets/locales/fil.json
+++ b/assets/locales/fil.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Bagong user interface design.\n۞ Pagdagdag ng library para sa mga tafsir at hadith books.\n۞ Pagpapabuti ng performance ng app.\n۞ Pagdagdag ng mga bagong feature.",
+  "What'sNewDetails10": "۞ Naayos ang problema sa pagpapakita ng notifications.\n۞ Pangkalahatang pagpapabuti sa performance at stability.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
