--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Desain antarmuka pengguna baru.\n۞ Menambahkan perpustakaan kitab tafsir dan hadits.\n۞ Peningkatan performa aplikasi.\n۞ Menambahkan fitur-fitur baru.",
+  "What'sNewDetails10": "۞ Memperbaiki masalah tampilan notifikasi.\n۞ Peningkatan kinerja dan stabilitas secara umum.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
