--- a/assets/locales/ms.json
+++ b/assets/locales/ms.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Reka bentuk antara muka pengguna baharu.\n۞ Ditambah perpustakaan untuk buku tafsir dan hadis.\n۞ Penambahbaikan prestasi aplikasi.\n۞ Ciri-ciri baharu ditambah.",
+  "What'sNewDetails10": "۞ Membetulkan masalah paparan pemberitahuan.\n۞ Peningkatan prestasi dan kestabilan secara umum.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
