--- a/assets/locales/ur.json
+++ b/assets/locales/ur.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ نیا یوزر انٹرفیس ڈیزائن۔\n۞ تفسیر اور حدیث کی کتب کا اضافہ۔\n۞ ایپ کی کارکردگی میں بہتری۔\n۞ نئے فیچرز کا اضافہ۔",
+  "What'sNewDetails10": "۞ اطلاعات ظاہر نہ ہونے کے مسئلے کو حل کیا گیا۔\n۞ کارکردگی اور استحکام میں عمومی بہتری۔",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
