--- a/assets/locales/ku.json
+++ b/assets/locales/ku.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ دیزاینی ڕووکاری بەکارهێنەر نوێ کرایەوە.\n۞ کتێبخانەیەک بۆ کتێبەکانی تفسیر و حدیث زیاد کرا.\n۞ کارایی بەرنامە باشتر کرا.\n۞ تایبەتمەندییە نوێکان زیاد کران.",
+  "What'sNewDetails10": "۞ چارەسەرکردنی کێشەی پیشاندانی ئاگادارییەکان.\n۞ باشترکردنی گشتی لە کارایی و سەقامگیری.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
