--- a/assets/locales/so.json
+++ b/assets/locales/so.json
@@ -444,7 +444,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Naqshadayn cusub oo isticmaale ah.\n۞ Ku daridda maktabad buugaag tafsir iyo xadith ah.\n۞ Wanaajinta dadaalka app-ka.\n۞ Ku daridda sifooyinka cusub.",
+  "What'sNewDetails10": "۞ Waxaa lagu hagaajiyay dhibaatada muuqaalka ogeysiisyada.\n۞ Hagaajinta guud ee waxqabadka iyo xasiloonida.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
