FIX: Fix the problem of notifications not appearing

--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -618,5 +618,15 @@
   "@salah": {
     "type": "text",
     "placeholders": {}
+  },
+  "start": "ابدأ",
+  "@start": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "skip": "تخطي",
+  "@skip": {
+    "type": "text",
+    "placeholders": {}
   }
 }
